<resources>
    <string name="app_name">calculadora</string>
    <string name="set_variavel_x">Set variável X</string>
    <string name="set_variavel_y">Set variável Y</string>
    <string name="calcular">Calcular</string>
    <string name="variavel_x">variavel X:</string>
    <string name="variavel_y">Variavel Y:</string>
    <string name="result">Result</string>
    <string name="y">Y</string>
    <string name="soma">Soma</string>
    <string name="x">X</string>
    <string name="ok">Ok</string>
    <string name="labelvariavel">LabelVariavel</string>
    <string name="cancelar">Cancelar</string>
</resources>